--- a/app/views/lists/index.html.haml
+++ b/app/views/lists/index.html.haml
@@ -8,7 +8,7 @@
         .name(style="display:inline")
           =link_to h(list.name), list_path(list)
         .delete.button
-          =link_to 'x', list_path(list), :method => :delete, :confirm => "Are you sure?"
+          =link_to 'x', list_path(list), :method => :delete, :confirm => "Delete this list?"
         
 :javascript
   $(document).ready(function() {
