--- a/app/views/lists/show.html.haml
+++ b/app/views/lists/show.html.haml
@@ -87,7 +87,7 @@
           data = {'_method':'put', 'item':{'complete':false}};
       if (item.hasClass("complete")) {
         item.removeClass("complete");
-        $("#items").append(item);
+        //$("#items").append(item);
       } else {
         item.addClass("complete");
         data.item.complete = true;
