--- a/app/views/lists/_item.html.haml
+++ b/app/views/lists/_item.html.haml
@@ -9,4 +9,4 @@
         -form_for [@list, item], :html => {:style => "display:none"} do |form|
           =form.text_field :body, :class => "item_body"
       %td.right
-        =link_to image_tag("delete.png"), list_item_path(@list, item), :method => :delete, :confirm => 'Delete?', :class => 'delete button'
+        =link_to image_tag("delete.png"), list_item_path(@list, item), :method => :delete, :confirm => 'Delete this item?', :class => 'delete button'
