--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -3,8 +3,10 @@
 %html
   %head
     =stylesheet_link_tag "compiled/screen"
+    =stylesheet_link_tag "tipTip"
     =javascript_include_tag "http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"
     =javascript_include_tag "http://ajax.googleapis.com/ajax/libs/jqueryui/1.8.4/jquery-ui.min.js"
+    =javascript_include_tag "jquery.tipTip.minified"
     %title
       lists
   %body
