--- a/app/views/lists/_item.html.haml
+++ b/app/views/lists/_item.html.haml
@@ -1,12 +1,8 @@
-%a.item{:id => item.id, :class => "#{'complete' if item.complete}"}
-  %table
-    %tr
-      %td.left
-        =check_box_tag "item[complete]", "1", item.complete, :class => "item_complete"
-      %td.center
-        .body
-          =h(item.body)
-        -form_for [@list, item], :html => {:style => "display:none"} do |form|
-          =form.text_field :body, :class => "item_body"
-      %td.right
-        =link_to image_tag("delete.png"), list_item_path(@list, item), :method => :delete, :confirm => 'Delete this item?', :class => 'delete button'
+.item{:id => item.id, :class => "#{'complete' if item.complete}"}
+  =check_box_tag "item[complete]", "1", item.complete, :class => "item_complete"
+  .body
+    =h(item.body)
+  -form_for [@list, item], :html => {:style => "display:none"} do |form|
+    =form.text_field :body, :class => "item_body"
+  
+  =link_to image_tag("delete.png"), list_item_path(@list, item), :method => :delete, :confirm => 'Delete this item?', :class => 'delete button'
