--- a/app/stylesheets/screen.scss
+++ b/app/stylesheets/screen.scss
@@ -55,10 +55,10 @@ a {
   }
   abbr {color: #993333;}
   .inline-errors {
-    @include border-radius(16px);
+    @include border-radius(8px);
     display: inline;
     position: absolute;
-    padding: 8px 21px 8px 21px;
+    padding: 8px 16px 8px 16px;
     margin-top: 2px;
     background-color: #CC3333;
     color: #fff;
@@ -90,7 +90,7 @@ input[type="checkbox"] {
   height: 11px;
   &:hover {background-color: #aaa;};
   &:checked {
-   background-color: #CCFFFF;
+   background-color: #FFFFCC;
 //   border: solid 1px #6699CC;
   };
 }
