More display fixes/polish.

--- a/app/stylesheets/screen.scss
+++ b/app/stylesheets/screen.scss
@@ -98,7 +98,7 @@ input[type="checkbox"] {
 form#new_session {
   text-align: center;
   input[type="submit"] {width: 100px;}
-  a {display: inline;}
+  a {display: inline; margin-left: 11px;}
 }
 
 .nav {
